Move generateId to core.js (#748)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -107,6 +107,7 @@
                 "escapeRegExp": "readonly",
                 "deferPromise": "readonly",
                 "clone": "readonly",
+                "generateId": "readonly",
                 "EventDispatcher": "readonly",
                 "EventListenerCollection": "readonly"
             }
