--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -66,6 +66,12 @@
         "page": "bg/settings.html",
         "open_in_tab": true
     },
+    "sandbox": {
+        "pages": [
+            "bg/template-renderer.html"
+        ],
+        "content_security_policy": "sandbox allow-scripts; script-src 'self' 'unsafe-eval'; object-src 'self'"
+    },
     "permissions": [
         "<all_urls>",
         "storage",
@@ -93,7 +99,8 @@
         }
     },
     "web_accessible_resources": [
-        "fg/float.html"
+        "fg/float.html",
+        "bg/template-renderer.html"
     ],
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
     "applications": {
