--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,13 @@ updates:
       interval: "weekly"
     labels:
       - "area/dependencies"
+    groups: # group minor/patch updates together
+      minor:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "npm"
     directory: "/"
@@ -13,3 +20,10 @@ updates:
       interval: "weekly"
     labels:
       - "area/dependencies"
+    groups: # group minor/patch updates together
+      minor:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
