--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
         "plugin:jsonc/recommended-with-json"
     ],
     "parserOptions": {
-        "ecmaVersion": 8,
-        "sourceType": "script",
+        "ecmaVersion": 2020,
+        "sourceType": "module",
         "ecmaFeatures": {
             "globalReturn": false,
             "impliedStrict": true
@@ -14,7 +14,7 @@
     },
     "env": {
         "browser": true,
-        "es2017": true,
+        "es2020": true,
         "webextensions": true
     },
     "plugins": [
@@ -255,7 +255,7 @@
             },
             "env": {
                 "browser": false,
-                "es2017": true,
+                "es2020": true,
                 "node": true,
                 "webextensions": false
             }
@@ -298,7 +298,7 @@
             "env": {
                 "browser": false,
                 "serviceworker": true,
-                "es2017": true,
+                "es2020": true,
                 "webextensions": true
             },
             "globals": {
@@ -322,7 +322,7 @@
             "env": {
                 "browser": false,
                 "worker": true,
-                "es2017": true,
+                "es2020": true,
                 "webextensions": true
             }
         },
