--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "test-lint": "npx eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
         "test-lint-css": "npx stylelint \"ext/**/*.css\" \"test/**/*.css\" \"dev/**/*.css\"",
         "test-lint-html": "npx html-validate \"ext/**/*.html\" \"test/**/*.html\" \"dev/**/*.html\"",
-        "test-lint-web-ext": "npx web-ext lint",
         "test-code": "node ./test/test-all.js ./test --skip ./test/test-manifest.js",
         "test-manifest": "node ./test/test-manifest.js",
         "test-build": "node ./dev/build.js --dry-run --all"
@@ -50,7 +49,6 @@
         "jsdom": "^22.1.0",
         "parse5": "^7.1.2",
         "stylelint": "^15.10.3",
-        "stylelint-config-recommended": "^13.0.0",
-        "web-ext": "^7.7.0"
+        "stylelint-config-recommended": "^13.0.0"
     }
 }
