--- a/.github/workflows/publish-firefox-development.yml
+++ b/.github/workflows/publish-firefox-development.yml
@@ -75,7 +75,7 @@ jobs:
                       "updates": [
                           {
                               "version": "${{ github.event.release.name }}",
-                              "update_link": "${{ steps.uploadReleaseAsset.browser_download_url }}"
+                              "update_link": "${{ steps.uploadReleaseAsset.outputs.browser_download_url }}"
                           }
                       ]
                   }
@@ -84,10 +84,11 @@ jobs:
           EOF
 
       - name: Commit files
+        continue-on-error: true
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -a -m "${{ github.event.release.name }} - ${{ github.event.release.html_url }}"
+          git commit -a -m "${{ github.event.release.name }} - ${{ github.event.release.html_url }}"      
 
       - name: Push changes
         uses: ad-m/github-push-action@29f05e01bb17e6f28228b47437e03a7b69e1f9ef # pin@master
