--- a/.github/workflows/publish-firefox-development.yml
+++ b/.github/workflows/publish-firefox-development.yml
@@ -74,7 +74,7 @@ jobs:
                   "{2d13e145-294e-4ead-9bce-b4644b203a00}": {
                       "updates": [
                           {
-                              "version": "${{ github.event.release.name }}",
+                              "version": "${{ github.ref_name }}",
                               "update_link": "${{ steps.uploadReleaseAsset.outputs.browser_download_url }}"
                           }
                       ]
@@ -88,7 +88,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -a -m "${{ github.event.release.name }} - ${{ github.event.release.html_url }}"
+          git commit -a -m "${{ github.ref_name }}"
 
       - name: Push changes
         uses: ad-m/github-push-action@29f05e01bb17e6f28228b47437e03a7b69e1f9ef # pin@master
