--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "css": "^3.0.0",
         "dexie": "^3.2.4",
         "dexie-export-import": "^4.0.7",
+        "dotenv": "^16.3.1",
         "esbuild": "^0.19.5",
         "eslint": "^8.52.0",
         "eslint-plugin-header": "^3.1.1",
