--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -381,7 +381,7 @@
         },
         {
             "files": [
-                "ext/js/yomichan.js"
+                "ext/js/yomitan.js"
             ],
             "globals": {
                 "chrome": "writable"
@@ -417,7 +417,7 @@
         {
             "files": [
                 "ext/js/core.js",
-                "ext/js/yomichan.js",
+                "ext/js/yomitan.js",
                 "ext/js/accessibility/accessibility-controller.js",
                 "ext/js/background/backend.js",
                 "ext/js/background/profile-conditions-util.js",
