--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -171,7 +171,7 @@
             "rules": {
                 "header/header": ["error", "block", [
                     "",
-                    {"pattern": " \\* Copyright \\(C\\) (\\d+-)?2022  Yomichan Authors"},
+                    {"pattern": " \\* Copyright \\(C\\) (\\d+-)?202[23]  (Yomichan|Yezichak) Authors"},
                     " *",
                     " * This program is free software: you can redistribute it and/or modify",
                     " * it under the terms of the GNU General Public License as published by",
