--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -262,6 +262,21 @@
         },
         {
             "files": [
+                "dict/**/*.js"
+            ],
+            "parserOptions": {
+                "ecmaVersion": 8,
+                "sourceType": "module"
+            },
+            "env": {
+                "browser": false,
+                "es2023": true,
+                "node": true,
+                "webextensions": false
+            }
+        },
+        {
+            "files": [
                 "ext/js/core.js",
                 "ext/js/yomichan.js",
                 "ext/js/accessibility/accessibility-controller.js",
