Automate generation of legal information for dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
         env:
           CI: true
 
+      - name: Build Legal
+        run: npm run license-report
+
       - name: Build
         run: npm run build
 
