--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "test-lint-css": "npx stylelint \"ext/**/*.css\" \"test/**/*.css\" \"dev/**/*.css\"",
         "test-lint-html": "npx html-validate \"ext/**/*.html\" \"test/**/*.html\" \"dev/**/*.html\"",
         "test-code": "vitest run",
-        "test-build": "node ./dev/bin/build.js --dry-run --all"
+        "test-build": "node ./dev/bin/build.js --dry-run --all",
+        "license-report": "license-report --output=html --only=prod --fields=name --fields=installedVersion --fields=licenseType --fields=link --html.cssFile=dev/data/legal-npm.css > ext/legal-npm.html",
+        "license-report-markdown": "license-report --output=markdown --only=prod --fields=name --fields=installedVersion --fields=licenseType --fields=link"
     },
     "repository": {
         "type": "git",
@@ -38,11 +40,8 @@
         "@playwright/test": "^1.39.0",
         "@types/node": "^20.8.10",
         "@vitest/coverage-v8": "^0.34.6",
-        "@zip.js/zip.js": "^2.7.30",
         "ajv": "^8.12.0",
         "css": "^3.0.0",
-        "dexie": "^3.2.4",
-        "dexie-export-import": "^4.0.7",
         "dotenv": "^16.3.1",
         "esbuild": "^0.19.5",
         "eslint": "^8.52.0",
@@ -52,14 +51,20 @@
         "eslint-plugin-no-unsanitized": "^4.0.1",
         "eslint-plugin-vitest": "^0.3.9",
         "fake-indexeddb": "^5.0.1",
-        "handlebars": "^4.7.8",
         "html-validate": "^8.7.0",
         "jsdom": "^22.1.0",
         "jszip": "^3.10.1",
-        "parse5": "^7.1.2",
+        "license-report": "^6.5.0",
         "stylelint": "^15.11.0",
         "stylelint-config-recommended": "^13.0.0",
-        "vitest": "^0.34.6",
-        "wanakana": "^5.2.0"
+        "vitest": "^0.34.6"
+    },
+    "dependencies": {
+        "@zip.js/zip.js": "^2.7.31",
+        "dexie": "^3.2.4",
+        "dexie-export-import": "^4.0.7",
+        "handlebars": "^4.7.8",
+        "parse5": "^7.1.2",
+        "wanakana": "^5.3.1"
     }
 }
