--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
         "license-report": "^6.5.0",
         "stylelint": "^15.11.0",
         "stylelint-config-recommended": "^13.0.0",
-        "typescript": "^5.2.2",
+        "typescript": "5.2.2",
         "vitest": "^0.34.6"
     },
     "dependencies": {
