--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "markdown.extension.toc.levels": "1..3",
     "editor.codeActionsOnSave": {
-        "source.addMissingImports": false,
-        "source.organizeImports": false,
-        "source.fixAll.eslint": false
+        "source.addMissingImports": true,
+        "source.organizeImports": true,
+        "source.fixAll.eslint": true
     },
     "eslint.format.enable": true,
     "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
