--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,18 @@
 {
     "markdown.extension.toc.levels": "1..3",
-    "editor.codeActionsOnSave": {
-        "source.addMissingImports": true,
-        "source.organizeImports": true,
-        "source.fixAll.eslint": true
+    "[javascript]": {
+        "editor.codeActionsOnSave": {
+            "source.addMissingImports": true,
+            "source.organizeImports": true,
+            "source.fixAll.eslint": true
+        },
+    },
+    "[typescript]": {
+        "editor.codeActionsOnSave": {
+            "source.addMissingImports": false,
+            "source.organizeImports": false,
+            "source.fixAll.eslint": true
+        },
     },
     "eslint.format.enable": true,
     "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
