--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "scripts": {
         "build": "node ./dev/bin/build.js",
         "build-libs": "node ./dev/bin/build-libs.js",
-        "test": "npm run test-lint-js && npm run test-ts && npm run test-ts-dev && npm run test-ts-test && npm run test-lint-css && npm run test-lint-html && npm run test-code && npm run test-build",
+        "test": "npm run test-lint-js && npm run test-ts && npm run test-lint-css && npm run test-lint-html && npm run test-code && npm run test-build",
         "test-lint-js": "npx eslint .",
         "test-lint-css": "npx stylelint \"ext/**/*.css\" \"test/**/*.css\" \"dev/**/*.css\"",
         "test-lint-html": "npx html-validate \"ext/**/*.html\" \"test/**/*.html\" \"dev/**/*.html\"",
-        "test-ts": "npx tsc --noEmit --project jsconfig.json",
+        "test-ts": "npm run test-ts-main && npm run test-ts-dev && npm run test-ts-test",
+        "test-ts-main": "npx tsc --noEmit --project jsconfig.json",
         "test-ts-dev": "npx tsc --noEmit --project dev/jsconfig.json",
         "test-ts-test": "npx tsc --noEmit --project test/jsconfig.json",
         "test-code": "vitest run",
