--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,16 @@
     "markdown.extension.toc.levels": "1..3",
     "[javascript]": {
         "editor.codeActionsOnSave": {
-            "source.addMissingImports": true,
-            "source.organizeImports": true,
-            "source.fixAll.eslint": true
+            "source.addMissingImports": "explicit",
+            "source.organizeImports": "explicit",
+            "source.fixAll.eslint": "explicit"
         },
     },
     "[typescript]": {
         "editor.codeActionsOnSave": {
-            "source.addMissingImports": false,
-            "source.organizeImports": false,
-            "source.fixAll.eslint": true
+            "source.addMissingImports": "never",
+            "source.organizeImports": "never",
+            "source.fixAll.eslint": "explicit"
         },
     },
     "eslint.format.enable": true,
