Only apply eslint rules to .test.js files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -765,7 +765,7 @@
         },
         {
             "files": [
-                "test/**"
+                "test/**/*.test.js"
             ],
             "plugins": [
                 "vitest"
