--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "stylelint": "^15.11.0",
         "stylelint-config-recommended": "^13.0.0",
         "stylelint-stylistic": "^0.4.3",
+        "ts-json-schema-generator": "^1.5.0",
         "typescript": "5.3.3",
         "vitest": "^0.34.6"
     },
